# faith

./: .gitignore  .sqlfluff  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/linters/: .actionlint.yaml  .actionlint.yml  .isort.cfg  .markdownlint.yml  .python-lint  .ruff.toml  .trivy.yml  .yamllint.yml
.github/workflows/: create-release.yml  dependency.yml  license-check.yml  lint-and-test.yml  lint.yml  scorecard.yml  stale.yml  unit-test.yml
docs/bigquery/: dashboards.md  quickstart.md  schema.md
docs/bigquery/queries/: compare_models.sql  latest_runs.sql  leaderboard.sql
docs/bigquery/views/: latest_runs.sql  leaderboard.sql
src/faith/: __init__.py
src/faith/__benchmarks__/: base-template.yaml  instructions-template.yaml  mcqa-template.yaml  output-processing-template.yaml  prompting-template.yaml  sources-template.yaml
tests/: conftest.py
tests/_internal/: test_expr.py  test_formatting.py  test_inspect.py  test_retry.py  test_validation.py
tests/_types/: test_enums.py
tests/benchmark/: test_all_datasets.py  test_listing.py  test_types.py
tests/cli/: test_flags.py
tests/experiment/: test_experiment.py  test_params.py  test_reconciliation.py  test_summarize.py
tests/ingestion/: __init__.py  test_bigquery.py  test_parser.py
tests/model/: test_base.py  test_config.py  test_factory.py  test_listing.py  test_model_configs.py  test_model_engine.py  test_open_router.py  test_openai.py  test_params.py  test_resolver.py  test_sagemaker.py  test_spec.py  test_vllm.py
tests/record_pipelines/: test_formatting.py  test_hashing.py  test_prediction.py  test_reconciliation.py  test_screening.py  test_sorting.py
(+336 files in other folders)
